--- a/style.css
+++ b/style.css
@@ -7,36 +7,33 @@
 }
 
 body{
-	background: linear-gradient(154.91deg, #8038FB 13.72%, #B414FF 85.7%);
+	/* background: linear-gradient(154.91deg,#25AEE9 -11.68%, #8038FB 13.72%, #B414FF 85.7%); */
 	display: flex;
 	justify-content: safe center;
 	align-items: center;
 	min-height: 100vh;
 }
 
-.links{
 
-    display: flex;
-}
 
 :root {
     --text-color: white;
-    --bg-url: url(./assets/bg-mobile.jpg);
+    --bg-url: url(./images/desktop-dark.png);
     --stroke-color: rgba(255, 255, 255, 0.5);
     --surface-color: rgba(255, 255, 255, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
     --highlight-color: rgba(255, 255, 255, 0.2);
-    --switch-bg-url: url(./assets/moon-stars.svg);
+    --switch-bg-url: url(./images/sun.svg);
   }
   
   .light {
     --text-color: black;
-    --bg-url: url(./assets/bg-mobile-light.jpg);
+    --bg-url: url(./images/desktop-light.png);
     --stroke-color: rgba(0, 0, 0, 0.5);
     --surface-color: rgba(0, 0, 0, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
     --highlight-color: rgba(0, 0, 0, 0.1);
-    --switch-bg-url: url(./assets/sun.svg);
+    --switch-bg-url: url(./images/moon-stars.svg);
   }
   
 #profile {
@@ -65,7 +62,7 @@ body{
   #switch button {
     width: 32px;
     height: 32px;
-    background: white var;
+    background: white var(--switch-bg-url) no-repeat center;
     border: 0;
     border-radius: 50%;
   
